✨(feat): Day 3 - Part 2 + inputs examples

--- a/2023/day_1/day_1.ipynb
+++ b/2023/day_1/day_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,26 +10,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Part 1-2"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "53221\n"
+      "Result: 55834\n"
      ]
     }
    ],
    "source": [
+    "# ---- PART ONE ---- #\n",
+    "\n",
     "with open('input_1.txt') as f:\n",
     "    content = f.readlines()\n",
     "content = [x.strip() for x in content]\n",
@@ -46,7 +41,51 @@
     "    'nine': 'nin9ine'\n",
     "}\n",
     "\n",
-    "def transform(text, part=2):\n",
+    "def transform(text, part):\n",
+    "    if part == 2:\n",
+    "        for word, number in word_number.items():\n",
+    "            text = text.replace(word, number)\n",
+    "    numbers = re.findall(r'\\d+', text)\n",
+    "    return int(numbers[0][0] + numbers[-1][-1])\n",
+    "\n",
+    "suma = sum([transform(text, part=1) for text in content])\n",
+    "\n",
+    "print('Result:', suma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 53221\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ---- PART TWO ---- #\n",
+    "\n",
+    "with open('input_1.txt') as f:\n",
+    "    content = f.readlines()\n",
+    "content = [x.strip() for x in content]\n",
+    "\n",
+    "word_number = {\n",
+    "    'one': 'on1ne',\n",
+    "    'two': 'tw2wo',\n",
+    "    'three': 'thr3ree',\n",
+    "    'four': 'fou4our',\n",
+    "    'five': 'fiv5ive',\n",
+    "    'six': 'si6ix',\n",
+    "    'seven': 'sev7ven',\n",
+    "    'eight': 'eig8ght',\n",
+    "    'nine': 'nin9ine'\n",
+    "}\n",
+    "\n",
+    "def transform(text, part):\n",
     "    if part == 2:\n",
     "        for word, number in word_number.items():\n",
     "            text = text.replace(word, number)\n",
@@ -54,7 +93,8 @@
     "    return int(numbers[0][0] + numbers[-1][-1])\n",
     "\n",
     "suma = sum([transform(text, part=2) for text in content])\n",
-    "print(suma)"
+    "\n",
+    "print('Result:', suma)"
    ]
   }
  ],
