--- a/2023/day_2/day_2.ipynb
+++ b/2023/day_2/day_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2239\n"
+      "Result: 2239\n"
      ]
     }
    ],
@@ -56,19 +56,19 @@
     "    \n",
     "    sum_id_games += game if flag else 0\n",
     "\n",
-    "print(sum_id_games)"
+    "print('Result:', sum_id_games)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83435\n"
+      "Result: 83435\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
     "    \n",
     "    sum += power_set(bag)\n",
     "\n",
-    "print(sum)"
+    "print('Result:', sum)"
    ]
   }
  ],
