--- a/2023/day_4/day_4.ipynb
+++ b/2023/day_4/day_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,30 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "index: 0 i: 1 increment: 1\n",
-      "index: 0 i: 2 increment: 1\n",
-      "index: 0 i: 3 increment: 1\n",
-      "index: 0 i: 4 increment: 1\n",
-      "index: 1 i: 1 increment: 2\n",
-      "index: 1 i: 2 increment: 2\n",
-      "index: 2 i: 1 increment: 4\n",
-      "index: 2 i: 2 increment: 4\n",
-      "index: 3 i: 1 increment: 8\n",
-      "Result: 30\n"
+      "Result: 5571760\n"
      ]
     }
    ],
    "source": [
     "# ---- PART TWO ---- #\n",
     "\n",
-    "with open('input_example.txt') as f:\n",
+    "with open('input_4.txt') as f:\n",
     "    content = f.readlines()\n",
     "content = [x.replace('\\n', '') for x in content]\n",
     "\n",
@@ -100,20 +91,10 @@
     "    }\n",
     "    cards.append(card)\n",
     "\n",
-    "\n",
-    "# for index, card in enumerate(cards):\n",
-    "#     if card['match'] > 0:\n",
-    "#         for j in range(card['copy'] + 1):\n",
-    "#             for i in range(card['match']):\n",
-    "#                 cards[index+i+1]['copy'] += 1\n",
-    "#     card['copy'] += 1\n",
-    "\n",
-    "\n",
     "for index, card in enumerate(cards):\n",
     "    if card['match'] > 0:\n",
     "        increment = card['copy'] + 1\n",
     "        for i in range(1, card['match'] + 1):\n",
-    "            print('index:', index, 'i:', i, 'increment:', increment)\n",
     "            if index + i < len(cards):  # Asegura que no se excedan los límites de la lista\n",
     "                cards[index + i]['copy'] += increment\n",
     "    card['copy'] += 1\n",
@@ -126,20 +107,6 @@
     "    sum += card\n",
     "\n",
     "print('Result:', sum)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[{'num': '1', 'match': 4, 'copy': 0}, # 4 + 0 = 4\n",
-    " {'num': '2', 'match': 2, 'copy': 1}, # 2 + 1 = 3\n",
-    " {'num': '3', 'match': 2, 'copy': 2}, # 2 + 2 = 4\n",
-    " {'num': '4', 'match': 1, 'copy': 2},\n",
-    " {'num': '5', 'match': 0, 'copy': 2},\n",
-    " {'num': '6', 'match': 0, 'copy': 0}]"
    ]
   }
  ],
